Attempt to fix iOS overflow problems.

--- a/editor/index.sass
+++ b/editor/index.sass
@@ -57,9 +57,9 @@ html
     z-index: -1
     position: fixed
     left: 0
-    top: 0
+    top: -100vh
     width: 100%
-    height: 100%
+    height: 300vh
     background: linear-gradient(to right, #422, #211)
 
 #app
